# adv-multiagent-framework

./: .env.example  .gitattributes  .gitignore  LICENSE  Makefile  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  sonar-project.properties
.github/workflows/: ci.yml  sonarcloud.yml
docker/: backend.Dockerfile
src/adversarial_framework/: cli.py
src/adversarial_framework/agents/: base.py
src/adversarial_framework/api/: app.py  dependencies.py
src/adversarial_framework/config/: settings.py
src/adversarial_framework/core/: checkpointer.py  constants.py  graph.py  reducers.py  state.py
src/adversarial_framework/db/: engine.py  models.py
src/adversarial_framework/defenses/: __init__.py  base.py  io_guardrails.py  layered.py  llm_judge.py  ml_guardrails.py  registry.py  rule_based.py  sandwich.py  semantic_guard.py  two_pass.py
src/adversarial_framework/memory/: __init__.py  attack_memory.py  defense_memory.py  embeddings.py  vector_store.py
src/adversarial_framework/scoring/: __init__.py  aggregator.py  harmbench_compat.py  metrics.py  rubrics.py
src/adversarial_framework/services/: __init__.py  cost_tracker.py  export_service.py  report_service.py
src/adversarial_framework/strategies/: base.py  parsing.py  registry.py
src/adversarial_framework/utils/: encryption.py  logging.py  rate_limiter.py  sanitization.py  token_counter.py
tests/: conftest.py
tests/e2e/: test_full_attack_cycle.py
tests/integration/: test_api_endpoints.py  test_dataset_endpoints.py  test_finetuning_endpoints.py  test_playground_endpoints.py
tests/unit/: test_attacker_baseline.py  test_attacker_reasoning.py  test_defense_improvements.py  test_session_modes.py  test_state.py  test_target_raw_response.py
tests/unit/test_agents/: test_analyzer_agent.py  test_defender_agent.py  test_evaluator.py  test_executor.py  test_planner.py  test_refiner.py
tests/unit/test_config/: test_settings.py
tests/unit/test_defenses/: test_io_guardrails.py  test_layered.py  test_llm_judge.py  (+6 more)
ui/: Dockerfile  package-lock.json  package.json  vitest.config.mts
(+217 files in other folders)
